# platable_backend_prototype

./: .gitignore  LICENSE.txt  README.md
containers/postgres/: .env.example  Dockerfile  docker-compose.yml
containers/postgres/migrations/: init.sql
platable_backend_prototype/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
platable_backend_prototype/docs/api/: swagger.json
platable_backend_prototype/migrations/: main.py
platable_backend_prototype/migrations/dumps/: batches.json  donations.json  donors.json  food_items.json  recipients.json
platable_backend_prototype/src/: config.py  server.py
platable_backend_prototype/src/app/food_items/controllers/: __init__.py  add_food_item_controller.py  delete_food_item_controller.py  list_food_items_controller.py  update_food_item_controller.py
platable_backend_prototype/src/infra/postgres/: __init__.py  config.py  repository.py  uow.py
platable_backend_prototype/src/infra/postgres/entities/: __init__.py  batch_entity.py  donation_entity.py  donor_entity.py  food_item_entity.py  recipient_entity.py
platable_backend_prototype/src/infra/postgres/repositories/: __init__.py  donors_repository.py  food_items_repository.py
platable_backend_prototype/src/util/: exception_handler.py
platable_backend_prototype/src/util/exceptions/: __init__.py  http_exception.py
